Added some CSS selectors to html. Added skeleton CSS, so everything is available visually.

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         </section>
         <section>
             <h2>5-Day Forecast:</h2>
-            <div class="5dayForecast"></div>
-            <div class="5dayForecast"></div>
-            <div class="5dayForecast"></div>
-            <div class="5dayForecast"></div>
-            <div class="5dayForecast"></div>
+            <div class="fiveDayForecast">one</div>
+            <div class="fiveDayForecast">two</div>
+            <div class="fiveDayForecast">three</div>
+            <div class="fiveDayForecast">four</div>
+            <div class="fiveDayForecast">five</div>
         </section>
     </main>
 </body>
