Added weather API, so that i can generate lat and lon and then add it to the one call API.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <aside>
         <h1>Search for a City:</h1>
         <form>
-            <input id="query">
+            <input id="query" type="text" placeholder="Enter a City">
             <button id="searchBtn">Search</button>
         </form>
         <hr>
         <div id="searchHistory"></div>
     </aside>
     <main>
-        <section>
+        <section >
             <h1>City Date weatherIcon</h1>
             <ul>
                 <li id="temp"></li>
@@ -32,6 +32,7 @@
                 <li id="humidity"></li>
                 <li id="uvIndex"></li>
             </ul>
+            
         </section>
         <section>
             <h2>5-Day Forecast:</h2>
