--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </section>
         <section>
             <h2>5-Day Forecast:</h2>
-            <div class="fiveDayForecast">one</div>
-            <div class="fiveDayForecast">two</div>
-            <div class="fiveDayForecast">three</div>
-            <div class="fiveDayForecast">four</div>
-            <div class="fiveDayForecast">five</div>
+            <div class="fiveDayForecast" id="day1"></div>
+            <div class="fiveDayForecast" id="day2"></div>
+            <div class="fiveDayForecast" id="day3"></div>
+            <div class="fiveDayForecast" id="day4"></div>
+            <div class="fiveDayForecast" id="day5"></div>
         </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
