All javaScript should be written minus minor changes. Added uv index color, and the date time.

--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
     </aside>
     <main>
         <section >
-            <h1>City Date weatherIcon</h1>
-            <ul>
-                <li id="temp"></li>
-                <li id="wind"></li>
-                <li id="humidity"></li>
-                <li id="uvIndex"></li>
-            </ul>
-            
+            <h1 id="weatherHead"></h1>
+            <div id="dailyWeather"></div>            
         </section>
         <section>
             <h2>5-Day Forecast:</h2>
