Added alerts, to give instructions and determine what happens if you do not enter a city name. Updated CSS and the screenshot.

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
             <div class="flexColumn" id="searchHistory"></div>
         </aside>
         <main class="flexColumn">
-            <section class="flexColumn">
-                <h1 id="weatherHead"></h1>
+            <section class="flexColumn" id="dailySection">
+                <h1 id="weatherHead">Weather Initializing...</h1>
                 <div id="dailyWeather"></div>            
             </section>
             <section class="flexColumn" id="fiveDay">
-                <div><h2>5-Day Forecast:</h2></div>
+                <h2>5-Day Forecast:</h2>
                 <div class="flexRow">
-                    <div class="fiveDayForecast" id="day1"></div>
-                    <div class="fiveDayForecast" id="day2"></div>
-                    <div class="fiveDayForecast" id="day3"></div>
-                    <div class="fiveDayForecast" id="day4"></div>
-                    <div class="fiveDayForecast" id="day5"></div>
+                    <div class="fiveDayForecast" id="day1">Initializing...</div>
+                    <div class="fiveDayForecast" id="day2">Initializing...</div>
+                    <div class="fiveDayForecast" id="day3">Initializing...</div>
+                    <div class="fiveDayForecast" id="day4">Initializing...</div>
+                    <div class="fiveDayForecast" id="day5">Initializing...</div>
                 </div>
             </section>
         </main>
